--- a/src/assets/templates/base.html
+++ b/src/assets/templates/base.html
@@ -13,14 +13,14 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta content="yes" name="mobile-web-app-capable">
-    <meta name="application-name" content="PubMed2XL">
+    <meta name="application-name" content="PubData2XL">
 
     <!-- Chrome for Android theme color -->
     <meta name="theme-color" content="#212529">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="PubMed2XL">
+    <meta name="apple-mobile-web-app-title" content="PubData2XL">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{% static 'img/favicons/apple-touch-icon.png' %}">
@@ -68,7 +68,7 @@
     <link rel="mask-icon" type="image/png" sizes="384x384" href="{% static '/img/favicons/maskable_icon_384x384.png' %}">
     <link rel="mask-icon" type="image/png" sizes="512x512" href="{% static '/img/favicons/maskable_icon_512x512.png' %}">
     
-    <title>&#10004;&#65039; PubMed2XL | {% block title %}{% endblock %}</title>
+    <title>&#10004;&#65039; PubData2XL | {% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
@@ -83,7 +83,7 @@
           </div>
           <div class="col-6 text-center">
             <a href="{% block logo_link_url %}{% endblock %}" id="logo_link_url" >
-              <img class="d-block mx-auto mb-1" width="80px" height="80px" src="/static/img/logo.svg" alt="PubMed2XL Logo">
+              <img class="d-block mx-auto mb-1" width="80px" height="80px" src="/static/img/logo.svg" alt="PubData2XL Logo">
             </a>
           </div>
           <div class="col-3 d-flex justify-content-end align-items-center">
@@ -102,8 +102,8 @@
       </div>
       <footer class="my-4 pt-5 text-light text-center text-small">
         <p class="mb-1">Created with love by Iván Rivera Caraballo</p>
-        <p class="mb-1">This is free and unencumbered software released into the <a class="text-success" href="https://github.com/PubMed2XL/PubMed2XL/blob/main/LICENSE" target="_blank">public domain</a>.</p>
-        <p class="mb-1">Source files are available on <a class="text-success" href="https://github.com/PubMed2XL/PubMed2XL" target="_blank">GitHub</a></p>
+        <p class="mb-1">This is free and unencumbered software released into the <a class="text-success" href="https://github.com/PubData2XL/PubData2XL/blob/main/LICENSE" target="_blank">public domain</a>.</p>
+        <p class="mb-1">Source files are available on <a class="text-success" href="https://github.com/PubData2XL/PubData2XL" target="_blank">GitHub</a></p>
       </footer>
     </div>
     <script src="{% static 'pwa/register_serviceworker.js' %}" crossorigin="anonymous"></script>
