--- a/src/assets/templates/admin/base_site.html
+++ b/src/assets/templates/admin/base_site.html
@@ -2,6 +2,6 @@
 
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
-{% block branding %}<h1 id="site-name"><a href="{% url 'admin:index' %}">PubMed2XL Administrator</a></h1>{% endblock %}
+{% block branding %}<h1 id="site-name"><a href="{% url 'admin:index' %}">PubData2XL Administrator</a></h1>{% endblock %}
 
 {% block nav-global %}{% endblock %}
