Add NLM Data Attibution Statement

--- a/src/assets/templates/base.html
+++ b/src/assets/templates/base.html
@@ -104,6 +104,7 @@
         <p class="mb-1">Created with love by Iván Rivera Caraballo</p>
         <p class="mb-1">This is free and unencumbered software released into the <a class="text-success" href="https://github.com/PubData2XL/PubData2XL/blob/main/LICENSE" target="_blank">public domain</a>.</p>
         <p class="mb-1">Source files are available on <a class="text-success" href="https://github.com/PubData2XL/PubData2XL" target="_blank">GitHub</a></p>
+        <p class="mb-1">Data is courtesy of the National Library of Medicine (NLM). PubData2XL is not a product or service of NLM and it is neither affiliated with nor endorsed by NLM.</p>
       </footer>
     </div>
     <script src="{% static 'pwa/register_serviceworker.js' %}" crossorigin="anonymous"></script>
