--- a/src/apps/pubdata2xl/templates/pubdata2xl/news.html
+++ b/src/apps/pubdata2xl/templates/pubdata2xl/news.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}PubData2XL Frequenty Asked Questions{% endblock %}
+{% block title %}PubData2XL News and Announcements{% endblock %}
 {% block styles %}<link href="{% static 'pubdata2xl/css/style.css' %}" rel="stylesheet" crossorigin="anonymous">{% endblock %}
 {% block lead %}Frequently Asked Questions{% endblock %}
 {% block description%}Download thousands of PubMed citations into a spreadsheet. Free, no ads, secure, encrypted, privacy, untraceable and simple to use.{% endblock %}
@@ -12,14 +12,14 @@
 {% block content %}
   <div class="row">
     <div class="col">
-      <div class="accordion" id="faq">
+      <div class="accordion" id="news">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="true" aria-controls="collapseOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#news1" aria-expanded="true" aria-controls="collapseOne">
               <h5>How to use in PubMed?</h5>
             </button>
           </h2>
-          <div id="faq1" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faq">
+          <div id="news1" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#news">
             <div class="accordion-body bg-dark text-light">
               <ol>
                 <li>Drag this link (<a class="text-success" target="_blank" href="javascript:(function(){function goToPubData2XL(pmids){if (pmids != &quot;&quot;) {window.open(&quot;https://www.pubdata2xl.com/&quot; + pmids, '_blank');}else {alert(&quot;Hmm, looks like you didn't select any records, or did you?&quot;);}}var pmids;switch (document.domain) {case &quot;ovidsp.dc2.ovid.com&quot;:pmids = $(&quot;td.titles-checkbox input:checked&quot;).parent().siblings().find(&quot;div.article-ui&quot;).map(function(){return $(this).text().match(/([0-9]+)/)[0]; }).get().join(&quot;,&quot;);goToMPubData2XL(pmids);break;case &quot;www.ncbi.nlm.nih.gov&quot;:pmids = jQuery(&quot;div.rprtnum input:checked&quot;).map(function(){ return this.value; }).get().join(&quot;,&quot;);goToPubData2XL(pmids);break;case &quot;pubmed.ncbi.nlm.nih.gov&quot;:pmids = $(&quot;div#search-results section.search-results-list article input.search-result-selector:checked&quot;).map(function(){ return this.value; }).get().join(&quot;,&quot;);goToPubData2XL(pmids);break;default:alert(&quot;Hmm, looks like you are not on a supported site, or are you?&quot;);}})()">PubData2XL</a>) to your browser's bookmarks / favorites bar to create a button.
@@ -34,11 +34,11 @@
         </div>
         <!-- <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3" aria-expanded="false" aria-controls="collapseThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#news3" aria-expanded="false" aria-controls="collapseThree">
               Accordion Item #3
             </button>
           </h2>
-          <div id="faq3" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faq">
+          <div id="news3" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#news">
             <div class="accordion-body bg-dark text-light">
               <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
             </div>
