--- a/src/apps/pubdata2xl/templates/pubdata2xl/news.html
+++ b/src/apps/pubdata2xl/templates/pubdata2xl/news.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}PubData2XL News and Announcements{% endblock %}
 {% block styles %}<link href="{% static 'pubdata2xl/css/style.css' %}" rel="stylesheet" crossorigin="anonymous">{% endblock %}
-{% block lead %}Frequently Asked Questions{% endblock %}
+{% block lead %}News and Announcements{% endblock %}
 {% block description%}Download thousands of PubMed citations into a spreadsheet. Free, no ads, secure, encrypted, privacy, untraceable and simple to use.{% endblock %}
 {% block logo_link_url %}{% url 'pubdata2xl:download_excel' %}{{ form.pmids.value|default_if_none:"" }}{% endblock %}
 {% block left_link_url %}{% url 'pubdata2xl:download_excel' %}{{ form.pmids.value|default_if_none:"" }}{% endblock %}
@@ -14,12 +14,24 @@
     <div class="col">
       <div class="accordion" id="news">
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#news1" aria-expanded="true" aria-controls="collapseOne">
+          <h2 class="accordion-header" id="heading2">
+            <button aria-expanded="true" aria-controls="collapse2" data-bs-target="#news2" class="accordion-button collapsed" data-bs-toggle="collapse" type="button">
+              “PubMed2XL” and “PubMed2XML” are now “PubData2XL” and “PubData2XML”
+            </button>
+          </h2>
+          <div id="news3" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#news">
+            <div class="accordion-body bg-dark text-light">
+              <strong>We are excited to announce that our company has undergone a significant transformation and is now known as PubData2XL. This change reflects our commitment to growth and innovation. Please be assured that despite the new name, your experience on our site will remain seamless and familiar. You can continue to access all the services and features you value in the exact same manner as before. Our dedication to providing you with exceptional service remains our top priority. Welcome to the new chapter of PubData2XL!</strong>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="heading1">
+            <button aria-expanded="false" aria-controls="collapse1" data-bs-target="#news1" class="accordion-button collapsed" data-bs-toggle="collapse" type="button">
               <h5>How to use in PubMed?</h5>
             </button>
           </h2>
-          <div id="news1" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#news">
+          <div id="news1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#news">
             <div class="accordion-body bg-dark text-light">
               <ol>
                 <li>Drag this link (<a class="text-success" target="_blank" href="javascript:(function(){function goToPubData2XL(pmids){if (pmids != &quot;&quot;) {window.open(&quot;https://www.pubdata2xl.com/&quot; + pmids, '_blank');}else {alert(&quot;Hmm, looks like you didn't select any records, or did you?&quot;);}}var pmids;switch (document.domain) {case &quot;ovidsp.dc2.ovid.com&quot;:pmids = $(&quot;td.titles-checkbox input:checked&quot;).parent().siblings().find(&quot;div.article-ui&quot;).map(function(){return $(this).text().match(/([0-9]+)/)[0]; }).get().join(&quot;,&quot;);goToMPubData2XL(pmids);break;case &quot;www.ncbi.nlm.nih.gov&quot;:pmids = jQuery(&quot;div.rprtnum input:checked&quot;).map(function(){ return this.value; }).get().join(&quot;,&quot;);goToPubData2XL(pmids);break;case &quot;pubmed.ncbi.nlm.nih.gov&quot;:pmids = $(&quot;div#search-results section.search-results-list article input.search-result-selector:checked&quot;).map(function(){ return this.value; }).get().join(&quot;,&quot;);goToPubData2XL(pmids);break;default:alert(&quot;Hmm, looks like you are not on a supported site, or are you?&quot;);}})()">PubData2XL</a>) to your browser's bookmarks / favorites bar to create a button.
