--- a/src/apps/pubdata2xl/templates/pubdata2xl/news.html
+++ b/src/apps/pubdata2xl/templates/pubdata2xl/news.html
@@ -19,9 +19,9 @@
               “PubMed2XL” and “PubMed2XML” are now “PubData2XL” and “PubData2XML”
             </button>
           </h2>
-          <div id="news2" class="accordion-collapse collapse" aria-labelledby="headingtwo" data-bs-parent="#news">
+          <div id="news2" class="accordion-collapse collapse show" aria-labelledby="headingtwo" data-bs-parent="#news">
             <div class="accordion-body bg-dark text-light">
-              <strong>We are excited to announce that the site has undergone a significant transformation and is now known as PubData2XL and PubData2XML. This rebranding is a stride towards enhancing our identity and expanding our horizons. Please be assured that despite the new names, your experience on our site will remain seamless and familiar. You can continue to access all the services and features you value in the exact same manner as before. Our dedication to providing you with exceptional service remains our top priority. Welcome to this exciting new phase with PubData2XL and PubData2XML!</strong>
+              <p>We are excited to announce that the site has undergone a significant transformation and is now known as PubData2XL and PubData2XML. This rebranding is a stride towards enhancing our identity and expanding our horizons. Please be assured that despite the new names, your experience on our site will remain seamless and familiar. You can continue to access all the services and features you value in the exact same manner as before. Our dedication to providing you with exceptional service remains our top priority. Welcome to this exciting new phase with PubData2XL and PubData2XML!</p>
             </div>
           </div>
         </div>
@@ -31,7 +31,7 @@
               <h5>How to use in PubMed?</h5>
             </button>
           </h2>
-          <div id="news1" class="accordion-collapse collapse show" aria-labelledby="headingone" data-bs-parent="#news">
+          <div id="news1" class="accordion-collapse collapse" aria-labelledby="headingone" data-bs-parent="#news">
             <div class="accordion-body bg-dark text-light">
               <ol>
                 <li>Drag this link (<a class="text-success" target="_blank" href="javascript:(function(){function goToPubData2XL(pmids){if (pmids != &quot;&quot;) {window.open(&quot;https://www.pubdata2xl.com/&quot; + pmids, '_blank');}else {alert(&quot;Hmm, looks like you didn't select any records, or did you?&quot;);}}var pmids;switch (document.domain) {case &quot;ovidsp.dc2.ovid.com&quot;:pmids = $(&quot;td.titles-checkbox input:checked&quot;).parent().siblings().find(&quot;div.article-ui&quot;).map(function(){return $(this).text().match(/([0-9]+)/)[0]; }).get().join(&quot;,&quot;);goToMPubData2XL(pmids);break;case &quot;www.ncbi.nlm.nih.gov&quot;:pmids = jQuery(&quot;div.rprtnum input:checked&quot;).map(function(){ return this.value; }).get().join(&quot;,&quot;);goToPubData2XL(pmids);break;case &quot;pubmed.ncbi.nlm.nih.gov&quot;:pmids = $(&quot;div#search-results section.search-results-list article input.search-result-selector:checked&quot;).map(function(){ return this.value; }).get().join(&quot;,&quot;);goToPubData2XL(pmids);break;default:alert(&quot;Hmm, looks like you are not on a supported site, or are you?&quot;);}})()">PubData2XL</a>) to your browser's bookmarks / favorites bar to create a button.
