--- a/src/apps/pubdata2xl/templates/pubdata2xl/news.html
+++ b/src/apps/pubdata2xl/templates/pubdata2xl/news.html
@@ -16,7 +16,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingtwo">
             <button aria-expanded="true" aria-controls="collapsetwo" data-bs-target="#news2" class="accordion-button collapsed" data-bs-toggle="collapse" type="button">
-              “PubMed2XL” and “PubMed2XML” are now “PubData2XL” and “PubData2XML”
+              <h5>“PubMed2XL” and “PubMed2XML” are now “PubData2XL” and “PubData2XML”</h5>
             </button>
           </h2>
           <div id="news2" class="accordion-collapse collapse show" aria-labelledby="headingtwo" data-bs-parent="#news">
