--- a/src/apps/pubdata2xl/templates/pubdata2xl/news.html
+++ b/src/apps/pubdata2xl/templates/pubdata2xl/news.html
@@ -14,14 +14,26 @@
     <div class="col">
       <div class="accordion" id="news">
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingtwo">
-            <button aria-expanded="true" aria-controls="collapsetwo" data-bs-target="#news2" class="accordion-button" data-bs-toggle="collapse" type="button">
+          <h2 class="accordion-header" id="headingThree">
+            <button aria-expanded="true" aria-controls="collapseThree" data-bs-target="#news3" class="accordion-button" data-bs-toggle="collapse" type="button">
               <h5>“PubMed2XL” and “PubMed2XML” are now “PubData2XL” and “PubData2XML”</h5>
             </button>
           </h2>
-          <div id="news2" class="accordion-collapse collapse show" aria-labelledby="headingtwo" data-bs-parent="#news">
+          <div id="news3" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#news">
             <div class="accordion-body bg-dark text-light">
               <p>We are excited to announce that the site has undergone a significant transformation and is now known as PubData2XL and PubData2XML. This rebranding is a stride towards enhancing our identity and expanding our horizons. Please be assured that despite the new names, your experience on our site will remain seamless and familiar. You can continue to access all the services and features you value in the exact same manner as before. Our dedication to providing you with exceptional service remains our top priority. Welcome to this exciting new phase with PubData2XL and PubData2XML!</p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingtwo">
+            <button aria-expanded="false" aria-controls="collapsetwo" data-bs-target="#news2" class="accordion-button collapsed" data-bs-toggle="collapse" type="button">
+              <h5>How to install PubData2XL?</h5>
+            </button>
+          </h2>
+          <div id="news2" class="accordion-collapse collapse" aria-labelledby="headingtwo" data-bs-parent="#news">
+            <div class="accordion-body bg-dark text-light">
+              <p>Instructions to install PubData2XL are available now in GitHub's <a href="https://github.com/PubData2XL/PubData2XL/blob/main/README.md">README.md</a> file.</p>
             </div>
           </div>
         </div>
