--- a/src/apps/pubdata2xl/templates/pubdata2xl/news.html
+++ b/src/apps/pubdata2xl/templates/pubdata2xl/news.html
@@ -33,7 +33,7 @@
           </h2>
           <div id="news2" class="accordion-collapse collapse" aria-labelledby="headingtwo" data-bs-parent="#news">
             <div class="accordion-body bg-dark text-light">
-              <p>Instructions to install PubData2XL are available now in GitHub's <a href="https://github.com/PubData2XL/PubData2XL/blob/main/README.md">README.md</a> file.</p>
+              <p>Instructions to install PubData2XL are available now in GitHub's <a class="text-success" target="_blank" href="https://github.com/PubData2XL/PubData2XL/blob/main/README.md">README.md</a> file.</p>
             </div>
           </div>
         </div>
