--- a/src/apps/pubdata2xl/static/pubdata2xl/css/style.css
+++ b/src/apps/pubdata2xl/static/pubdata2xl/css/style.css
@@ -4,7 +4,7 @@
 /* green #198754*/
 .form-control:focus {
     color: #212529;
-    background-color: #fff;
+    background-color: rgba(var(--bs-white-rgb), var(--bs-text-opacity));
     border-color: #198754;
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgb(25 135 84 / 25%);
@@ -26,20 +26,20 @@
     border-color: #198754 !important;
 }
 .accordion-button{
-    color: #fff;
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity));
     background-color: #212529;
     border-bottom: 1px solid;
     border-bottom-color: #198754 !important;
 }
 .accordion-button:not(.collapsed) {
     /*This changes the accordionheader (button)*/
-    color: #fff;
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity));
     background-color: #198754;
     border-bottom: 1px solid;
     border-bottom-color: #198754 !important;
 }
 .accordion-button:hover{
-    color: #fff;
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity));
     background-color: #198754;
 }
 .accordion-button:focus {
@@ -47,7 +47,7 @@
     box-shadow: 0 0 0 0;
 }
 .accordion-button:active{
-    color: #fff;
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity));
     background-color: #198754;
     border: 0;
     border-bottom: 1px solid!important;
@@ -59,6 +59,15 @@
 }
 
 /* Autoresize textarea */
+
+textarea::placeholder {
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+    opacity: 1 !important;
+}
+
+textarea::-ms-input-placeholder { /* Edge 12 -18 */
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+  }
 
 .grow-wrap {
     /* easy way to plop the elements on top of each other and have them both sized based on the tallest one's height */
